Fix responsive classes

--- a/basics.html
+++ b/basics.html
@@ -16,7 +16,7 @@
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
-        <div class="container container-mobile flex flex-center--y">
+        <div class="container flex flex-center--y">
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
@@ -58,8 +58,8 @@
 
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center flex-column flex-between background">
-        <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile flex flex-center text-white text-shadow">
+        <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+        <div class="container flex flex-center text-white text-shadow">
             <h1><span>BASICS</span> of 3D Printing</h1>
         </div>
         <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
@@ -112,7 +112,7 @@
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container container-mobile flex flex-center">
+        <div class="container flex flex-center">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
