--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
-        <div class="container container-mobile flex flex-center--y">
+        <div class="container flex flex-center--y">
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg"
+                    <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg"
                         alt="the fab forever logo">
                 </a>
                 <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
@@ -59,7 +59,7 @@
     <main>
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
-            <div class="container container-mobile flex flex-column-reverse-mobile flex-center--y">
+            <div class="container flex flex-column-reverse-mobile flex-center--y">
                 <div class="column-2 column-2-mobile flex flex-column flex-column-mobile text-center-mobile margin-top-l-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
@@ -80,7 +80,7 @@
         <!--ABOUT SECTION START-->
         <section class="section-full background-reverse flex flex-center flex-column flex-between">
             <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
+            <div class="container flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile text-white text-shadow">
                     <h2><span>3D</span>Printing resources for you!</h2>
                     <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing
@@ -131,7 +131,7 @@
         <!--CONTACT SECTION START-->
         <section class="section-full background flex flex-center flex-column flex-between ">
             <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container container-mobile flex-column-mobile flex flex-center text-center-mobile container-padding-mobile">
+            <div class="container flex-column-mobile flex flex-center text-center-mobile container-padding-mobile">
                 <div
                     class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile margin-bottom--l">
                     <h2><span>GOT</span> questions?</h2>
@@ -164,7 +164,7 @@
     </main>
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container container-mobile flex">
+        <div class="container flex">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p class="footer-text">An educational static website project</p>
