Fix position of main element

--- a/materials.html
+++ b/materials.html
@@ -29,8 +29,8 @@
                 <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">
+                        <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                            aria-label="this link sends you to the home page">
                             <li>HOME</li>
                         </a>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
@@ -66,43 +66,65 @@
     </section>
 
     <!--CONTENT SECTION START-->
-    <section class="section-full flex flex-center section-padding--bottom">
-    <div class="container container--mobile flex flex-column--mobile">
-        <main>
-            <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.png" alt="this should be a filament image">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h2>
-                <p>Materials in 3D printing are made of long strands of plastic (filament). They get pushed through the heated nozzle of a 3d printer, where they are molten and reapplied to the print bed. Filaments come in two sizes - 3mm and 1.75mm. Which one is used is mainly determined by the type of printer at hand. Ultimaker devices for example use 3mm filament, while most other printers use 1.75mm.</p>
-            </article>
-            <article>
-                <h2 class="margin-bottom--s"><span>WHICH </span>materials are there?</h2>
-                <p>The most common materials used in 3d printing are PLA, ABS and PETG. PLA is a very good base material which can be printed easily due to its low melting point of about 180 degrees celsius. The only drawback is that it isnt very heat resistant. Printed objects must not exceed ambient temperatures of 45 degrees - otherwise they will get soft and deform quickly.<br><br> This is where ABS comes into the picture. ABS is a industrial grade 3d printing material. Industrial grade means it is widely adopted as a material used in industrial applications such as injection molding. An ABS printed object can withstand temperatures of up to 110 degrees celsius, but needs to be printed at about 250 degrees. On top of that ABS comes with a distinctive smell which is definetly not for everyone.<br><br>PETG is like inbetween PLA and ABS, it doesnt smell like ABS, but needs to printed at almost the same temperatures. On the other hand it prints very easily and still withstands temperatures of 100 degrees celsius.</p>
-            </article>
-            <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.png" alt="this should be a filament roll">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>ARE</span> they safe?</h2>
-                <p>It depends. Some companies advertise their materials as safe for food and safe for toys. But this needs to be taken with a grain of salt, because the safe labels do not account forthe production process, which is 3d printing in this case. This study suggests that there are also toxic fumes produced while 3d printing. So if you can get a printer with a housing and an air filter around it, go ahead to safe on the safe side.</p>
-            </article>
-            <article>
-                <h2 class="margin-bottom--s"><span>CAN</span> I make my own?</h2>
-                <p>Yes definetly, there are existing community efforts to build small home extruders. But it isnt as easy as you might think. So before you get your feet wet in that, try to run the numbers for bought
-                    filament vs self made filament.
-                </p>
-            </article>
-        </main>
-    </div>
-    </section>
-    
+    <main>
+        <section class="section-full flex flex-center section-padding--bottom">
+            <div class="container container--mobile flex flex-column--mobile">
+
+                <picture class="flex flex-center">
+                    <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                    <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                    <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                    <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.png"
+                        alt="this should be a filament image">
+                </picture>
+                <article class="margin-top--l margin-bottom--l">
+                    <h2 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h2>
+                    <p>Materials in 3D printing are made of long strands of plastic (filament). They get pushed through
+                        the heated nozzle of a 3d printer, where they are molten and reapplied to the print bed.
+                        Filaments come in two sizes - 3mm and 1.75mm. Which one is used is mainly determined by the type
+                        of printer at hand. Ultimaker devices for example use 3mm filament, while most other printers
+                        use 1.75mm.</p>
+                </article>
+                <article>
+                    <h2 class="margin-bottom--s"><span>WHICH </span>materials are there?</h2>
+                    <p>The most common materials used in 3d printing are PLA, ABS and PETG. PLA is a very good base
+                        material which can be printed easily due to its low melting point of about 180 degrees celsius.
+                        The only drawback is that it isnt very heat resistant. Printed objects must not exceed ambient
+                        temperatures of 45 degrees - otherwise they will get soft and deform quickly.<br><br> This is
+                        where ABS comes into the picture. ABS is a industrial grade 3d printing material. Industrial
+                        grade means it is widely adopted as a material used in industrial applications such as injection
+                        molding. An ABS printed object can withstand temperatures of up to 110 degrees celsius, but
+                        needs to be printed at about 250 degrees. On top of that ABS comes with a distinctive smell
+                        which is definetly not for everyone.<br><br>PETG is like inbetween PLA and ABS, it doesnt smell
+                        like ABS, but needs to printed at almost the same temperatures. On the other hand it prints very
+                        easily and still withstands temperatures of 100 degrees celsius.</p>
+                </article>
+                <picture class="flex flex-center">
+                    <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                    <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                    <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                    <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.png"
+                        alt="this should be a filament roll">
+                </picture>
+                <article class="margin-top--l margin-bottom--l">
+                    <h2 class="margin-bottom--s"><span>ARE</span> they safe?</h2>
+                    <p>It depends. Some companies advertise their materials as safe for food and safe for toys. But this
+                        needs to be taken with a grain of salt, because the safe labels do not account forthe production
+                        process, which is 3d printing in this case. This study suggests that there are also toxic fumes
+                        produced while 3d printing. So if you can get a printer with a housing and an air filter around
+                        it, go ahead to safe on the safe side.</p>
+                </article>
+                <article>
+                    <h2 class="margin-bottom--s"><span>CAN</span> I make my own?</h2>
+                    <p>Yes definetly, there are existing community efforts to build small home extruders. But it isnt as
+                        easy as you might think. So before you get your feet wet in that, try to run the numbers for
+                        bought
+                        filament vs self made filament.
+                    </p>
+                </article>
+            </div>
+        </section>
+    </main>
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
@@ -130,9 +152,8 @@
         </div>
     </footer>
     <!--FOOTER END-->
-
-
-
+    
     <script src="assets/js/mobile-menu.js" defer></script>
 </body>
+
 </html>
