--- a/basics.html
+++ b/basics.html
@@ -68,7 +68,7 @@
     <!--CONTENT SECTION START-->
 <main>
     <section class="section-full flex flex-center section-padding--bottom">
-    <div class="container container--mobile">
+    <div class="container flex flex-column">
             <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.png">
