Fix layout on content

--- a/materials.html
+++ b/materials.html
@@ -68,7 +68,7 @@
     <!--CONTENT SECTION START-->
     <main>
         <section class="section-full flex flex-center section-padding--bottom">
-            <div class="container container--mobile flex flex-column--mobile">
+            <div class="container flex flex-column flex-column--mobile">
 
                 <picture class="flex flex-center">
                     <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
