--- a/help.html
+++ b/help.html
@@ -16,7 +16,7 @@
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
-        <div class="container container-mobile flex flex-center--y">
+        <div class="container flex flex-center--y">
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
@@ -59,7 +59,7 @@
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center flex-column flex-between background">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile text-white text-shadow flex flex-center">
+        <div class="container text-white text-shadow flex flex-center">
             <h1><span>HELP</span> for common errors</h1>
         </div>
         <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
@@ -68,7 +68,7 @@
     <!--CONTENT SECTION START-->
     <main>
     <section class="section-full flex flex-center section-padding--bottom">
-    <div class="container container--mobile flex flex-column--mobile">
+    <div class="container flex flex-column flex-column--mobile">
         
             <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.png">
@@ -100,7 +100,7 @@
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container container-mobile flex flex-center">
+        <div class="container flex flex-center">
             <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
