Test active link coloring

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
                 <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
+                        <a id="home" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
                             target="_self" aria-label="this link sends you to the home page">
                             <li>HOME</li>
                         </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                        <a id="basics" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
                             target="_self" aria-label="this link sends you to the basics page">
                             <li>BASICS</li>
                         </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                        <a id="materials" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
                             target="_self" aria-label="this link sends you to the materials page">
                             <li>MATERIALS</li>
                         </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                        <a id="models" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
                             target="_self" aria-label="this link sends you to the models page">
                             <li>MODELS</li>
                         </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                        <a id="help" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
                             target="_self" aria-label="this link sends you to the help page">
                             <li>HELP</li>
                         </a>
