Add content to models

--- a/models.html
+++ b/models.html
@@ -78,11 +78,13 @@
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>A 3D model represents geometry in 3D space. It is defined by vertices, edges and faces and also their position in 3D space (X, Y and Z axis). The most common file type for 3D printers is the STL (STereoLithography) file format and can be exported from a variety of softwares.
+                </p>
             </article>
             <article>
                 <h2 class="margin-bottom--s"><span>HOW </span>can I make them?</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>3D models are made with CAD programs like Fusion360 or Moi3D. There is a learning curve to these type of programs nut fortunately it is not very steep, depending on what you need to do.
+                </p>
             </article>
             <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
@@ -92,7 +94,9 @@
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>Getting hold of 3D models is not very hard. There are plenty of sites in the internet which provide them. The most popular site is Thingiverse, but there are also other sites like
+                    Cults or CGTrader. You can search for what you need there, but be aware that some models need to be paid.
+                </p>
             </article>
     </div>
     </section>
