Add content to help

--- a/help.html
+++ b/help.html
@@ -78,11 +78,15 @@
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>CLOGGED </span>nozzles</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>While printing a model there are a few errors which can occur while printing. The most common one is the clogged nozzle. You can identify the error by hearing a loud clicking sound from the printers nozzle.
+                    This means, that something is blocking the way for the molten plastic to come out of the nozzle. This can be resolved by changing the old nozzle for a new one followed by heating up the clogged nozzle and cleaning it.
+                </p>
             </article>
             <article>
                 <h2 class="margin-bottom--s"><span>BED </span>is not level</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>One of the most crucial parts is the bed leveling. If your printbed is not levelled correctly (this means it is perpendicular to the nozzle) it can lead to a few errors ranging from
+                    too wide or narrow lines (messes up the models dimension) or the molten plastic not coming out at all. The best solution here is to pay extreme attention to how you level your bed. Some printers have inbuilt routines to do that and some printers can also do it automatically.
+                </p>
             </article>
             <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-my-model-mobile.png">
@@ -92,7 +96,7 @@
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with flipped normals. You can fix that easily by recalculating the normals in your modeling software.</p>
             </article>
     </div>
     </section>
