Remove defer from js script

--- a/basics.html
+++ b/basics.html
@@ -139,6 +139,6 @@
 
 
 
-    <script src="assets/js/mobile-menu.js" defer></script>
+    <script src="assets/js/mobile-menu.js"></script>
 </body>
 </html>
