Add autocomplete to form email field

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <label for="lname">Your last name <span class="red-star">*</span></label>
                         <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
                         <label for="email">Your eMail address <span class="red-star">*</span></label>
-                        <input type="email" id="email" name="email" aria-label="Put your email address in here"
+                        <input type="email" id="email" name="email" aria-label="Put your email address in here" autocomplete="email"
                             required>
                         <div class="legal-wrapper">
                             <p class="legal-text">with <span class="red-star">*</span> marked fields are mandatory</p>
