Fix error on attributes

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
                 <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
-                        <li id="home" href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">
-                            <a>HOME</a>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
+                            target="_self" aria-label="this link sends you to the home page">HOME</a>
                         </li>
-                        <li id="basics" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">
-                            <a>BASICS</a>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
-                        <li id="materials" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">
-                            <a>MATERIALS</a>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
-                        <li id="models" href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">
-                            <a>MODELS</a>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
-                        <li id="help" href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                        <li href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
                             target="_self" aria-label="this link sends you to the help page">
                             <a>HELP</a>
                         </li>
