Fix error on attributes

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                             <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
                             target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
-                        <li href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">
-                            <a>HELP</a>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
