--- a/response.html
+++ b/response.html
@@ -30,26 +30,26 @@
                 <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">
-                            <li>HOME</li>
-                        </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">
-                            <li>BASICS</li>
-                        </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">
-                            <li>MATERIALS</li>
-                        </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">
-                            <li>MODELS</li>
-                        </a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">
-                            <li>HELP</li>
-                        </a>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
+                            target="_self" aria-label="this link sends you to the home page">HOME</a>
+                        </li>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                        </li>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                        </li>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                        </li>
+                        <li>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            target="_self" aria-label="this link sends you to the help page">HELP</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
