--- a/basics.html
+++ b/basics.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The basics page provides information on what 3d printing is">
     <meta name="keywords" content="3d printer, how to 3d print, 3d printing, 3d printing material, material, filament">
     <meta name="author" content="Daniel Stauffer">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
